--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,25 @@
-<header>
-  <div class="container">
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><%= link_to I18n.t("home") %></li>
-      <li role="presentation"><%= link_to I18n.t "word_list" %></li>
-      <li role="presentation"><%= link_to I18n.t "categories" %></li>
-      <li role="presentation"><%= link_to I18n.t "lesson" %></li>
-
-      <li class="dropdown pull-right">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= t "user_name" %><span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <li><%= link_to I18n.t "change_profile" %></li>
-          <li class="divider"></li>
-          <li><%= link_to I18n.t "log_out" %></li>
-        
-        </ul>
-      </li>
+<div class="container">
+  <nav>
+    <ul class="nav nav-tabs" role="tablist">
+      <li role="presentation" class="active" role="tab" data-toggle="tab" ><%= link_to t("home") %></li>
+      <li role="presentation" role="tab" data-toggle="tab"><%= link_to t("word_list"),"#" %></li>
+      <li role="presentation" role="tab" data-toggle="tab"><%= link_to t("categories"),"#" %></li>
+      <li role="presentation" role="tab" data-toggle="tab"><%= link_to t("lesson"),"#" %></li>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+          <li><%= link_to t("user"), users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= current_user.name %>  <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("change_profile"), current_user %></li>
+              <li class="divider"></li>
+              <li><%= link_to t("log_out"), logout_path, method: "delete" %></li>
+            </ul>
+          </li>
+        <% end %>
+      </ul>
     </ul>
-  </div>
-</header>
+  </nav>
+</div>
