--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,2 +1,3 @@
 <h1><%= current_user.name %></h1>
-<span><%= link_to t("view_profile"), current_user %></span></span>
+<span><%= link_to t("view_profile"), current_user %></span>
+
