--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,9 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <%= render Settings.choices.follow_form %>
+    </section>
   </aside>
   <div class="col-md-8">
   </div>
