--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,6 +11,9 @@
           <section class="user_info">
             <%= render "shared/user_info" %>
           </section>
+          <section class="stats">
+            <%= render "shared/stats" %>
+          </section>
         </div>
       </div>
       <div class="col-md-8" style="">
