--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,12 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <%= render "follow_form" if logged_in? %>
+    </section>
+    <section class="stats">
+      <%= render "shared/stats" %>
+    </section>
   </aside>
   <div class="col-md-8">
   </div>
