Finish Word List layout

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="nav nav-pills">
       <li role="presentation"><%= link_to t("home"), root_url %></li>
-      <li role="presentation"><%= link_to t("word_list"), "#" %></li>
+      <li role="presentation"><%= link_to t("word_list"), words_path %></li>
       <li role="presentation"><%= link_to t("categories"), categories_path %></li>
       <li role="presentation"><%= link_to t("lesson"),"#" %></li>
       <ul class="nav navbar-nav navbar-right">
