--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, @user.name %>
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-3">
     <section>
       <%= image_tag @user.avatar.url,
         size: Settings.user.avatar.profile_avatar_size if @user.avatar  %>
@@ -15,11 +15,13 @@
       <%= render "shared/stats" %>
     </section>
   </aside>
-  <div class="col-md-8">
-    <h3><%= t :activities %></h3>
-    <div class="activities">
-      <%= render @activities unless @activities.blank? %>
-    </div>
-    <hr>
+  <div class="col-md-9">
+    <% if @user.activities.any? %>
+      <h3 align="center"><%= t :activities %></h3>
+      <div class="activities">
+        <%= render @activities if @user.activities.any? %>
+      </div>
+      <hr>
+    <% end %>
   </div>
 </div>
