--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,14 +2,24 @@
 <div class="row">
   <aside class="col-md-4">
     <section>
-      <h1>
+      <%= image_tag @user.avatar.url,
+        size: Settings.user.avatar.profile_avatar_size if @user.avatar  %>
+      <h3>
         <%= @user.name %>
-      </h1>
+      </h3>
     </section>
     <section>
       <%= render Settings.choices.follow_form %>
     </section>
+    <section class="stats">
+      <%= render "shared/stats" %>
+    </section>
   </aside>
   <div class="col-md-8">
+    <h3><%= t :activities %></h3>
+    <div class="activities">
+      <%= render @activities unless @activities.blank? %>
+    </div>
+    <hr>
   </div>
 </div>
