--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
               <%= current_user.name %>  <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("change_profile"), current_user %></li>
+              <li><%= link_to t("change_profile"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li><%= link_to t("log_out"), logout_path, method: "delete" %></li>
             </ul>
