--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -4,10 +4,10 @@
     <b><%= t "categories" %></b>
     <div id="search-field">
       <div class="col-md-6">
-        <%= collection_select(Settings.search_form.blank,
-                              :category_id, @categories, :id,
-                              :name, {prompt: false},
-                              {class: "form-control"}) %>
+        <%= collection_select Settings.search_form.blank,
+                              :category_id, @categories, :id, :name,
+                              {prompt: Settings.search_form.select_category},
+                              class: "form-control" %>
         <table class="table table-bordered">
           <% {learned: t("learned"), not_learned: t("not_learned"),
               all_word: t("all")}.each do |key, value| %>
