--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,9 +13,15 @@
         </div>
       </div>
       <div class="col-md-8" style="">
-        <br/>
         <%= link_to t("word_list"),"#", class: "action-button shadow animate blue" %>
         <%= link_to t("lesson"),"#", class: "action-button shadow animate red" %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-9">
+        <%= render "shared/feed" %>
       </div>
     </div>
   </div>
