--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,10 +16,13 @@
     </section>
   </aside>
   <div class="col-md-8">
+  <% if @user.activities.any? %>
     <h3><%= t :activities %></h3>
     <div class="activities">
-      <%= render @activities unless @activities.blank? %>
+      <%= render @activities %>
     </div>
     <hr>
+    <%= will_paginate @activities %>
+  <% end %>
   </div>
 </div>
