Make lesson by random words

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,8 +47,12 @@ body
 }
 
 .vertical-line {
-display: inline;
-background-color: #000;
-width: 1px;
-height: 100%;
+  display: inline;
+  background-color: #000;
+  width: 1px;
+  height: 100%;
+}
+
+.start-button{
+  margin: 10px 20px 30px 300px;
 }
