Adding timer using jQuery, changing the handling ways in lesson controller

--- a/app/views/lessons/_question.html.erb
+++ b/app/views/lessons/_question.html.erb
@@ -10,7 +10,7 @@
     <% f.object.word.answers.each do |answer| %>
       <div class="row">
         <div class="col-md-2">
-          <%= f.radio_button :answer_id, answer.id %>
+          <%= f.radio_button :answer_id, answer.id, disabled: @is_time_over %>
         </div>
         <div class="col-md-3"><%= answer.mean %></div>
       </div>
