--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,3 +25,5 @@
   <div class="col-md-9">
     <%= image_tag Settings.signup_page.right_photo.url, size: Settings.signup_page.right_photo.size %>
 </div>
+
+<%= javascript_include_tag "bootstrap-filestyle", "data-turbolinks-track": true %>
