--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,3 +31,5 @@
     <%= image_tag Settings.update_acc_page.right_photo.url, size: Settings.update_acc_page.right_photo.size %>
   </div>
 </div>
+
+<%= javascript_include_tag "bootstrap-filestyle", "data-turbolinks-track": true %>
