--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,8 +4,8 @@
       <div class="list-group-item list-group-item-success">
         <h3 class="list-group-item-heading">
           <%= @category.name %>
-          <%= link_to t("start"), new_category_lesson_path(category_id: @category.id),
-            class: "btn btn-primary start-button pull-right" %>
+          <%= link_to t("start"), category_lessons_path(category_id: @category.id),
+            method: :post, class: "btn btn-primary start-button pull-right" %>
         </h3>
         <br>
         <ul class="list-group">
