--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -10,7 +10,7 @@
         </p>
       </div>
       <span class="col-md-1">
-        <%= link_to t("start"), new_category_lesson_path(category_id: category.id),
+        <%= link_to t("enter"), category_path(category),
           class: "btn btn-primary start-button" %>
       </span>
     </div>
