--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,18 +1,9 @@
 <div class="container">
   <h2 style="color:red" align="center"><%= t "word_list" %></h2>
-  <%= render "shared/search_form" %>
-  <table class="table table-hover">
-    <tr class="success">
-      <th><%= t "word" %></th>
-      <th><%= t "meaning" %></th>
-    </tr>
-    <% @words.each do |w| %>
-      <tr>
-        <td><%= w.word %></td>
-        <td><%= w.answers.find_by(is_correct: true).mean %></td>
-      </tr>
-    <% end %>
-  </table>
+  <%= render "shared/filter_form" %>
+  <div id="word_table">
+    <%= render "word" %>
+  </div>
   <div class="col-md-6 col-md-offset-3 paginate">
     <%= will_paginate @word %>
   </div>
