Finish show lesson

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -11,7 +11,7 @@
       </div>
       <span class="col-md-1">
         <%= link_to t("enter"), category_path(category),
-          class: "btn btn-primary start-button" %>
+          class: "btn btn-primary" %>
       </span>
     </div>
   </div>
