--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-8">
         <%= link_to t("word_list"), words_path, class: "action-button shadow animate blue" %>
-        <%= link_to t("lesson"), "#", class: "action-button shadow animate red" %>
+        <%= link_to t("lesson"), lessons_path, class: "action-button shadow animate red" %>
       </div>
     </div>
     <div class="row">
