--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <li role="presentation"><%= link_to t("home"), root_url %></li>
       <li role="presentation"><%= link_to t("word_list"), words_path %></li>
       <li role="presentation"><%= link_to t("categories"), categories_path %></li>
-      <li role="presentation"><%= link_to t("lesson"),"#" %></li>
+      <li role="presentation"><%= link_to t("lesson"), lessons_path %></li>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to t("user"), users_path %></li>
