--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,10 @@ body
 {
   padding: 50px;
 }
+header
+{
+  background-image:url("e-learning.jpg");
+}
 
 .animate
 {
@@ -57,6 +61,7 @@ body
   margin: 10px 20px 30px 300px;
 }
 
-.activities{
+.activities
+{
   color:gray;
 }
