--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top" style="background:#505050">
+<header class="navbar navbar-fixed-top header">
   <div class="container">
     <ul class="nav nav-pills">
       <li role="presentation"><%= link_to t("home"), root_url %></li>
@@ -7,7 +7,7 @@
       <li role="presentation"><%= link_to t("lesson"), lessons_path %></li>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-          <li><%= link_to t("user"), users_path %></li>
+          <li><%= link_to t("users"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= current_user.name %>  <b class="caret"></b>
