--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,3 +65,13 @@ header
 {
   color:gray;
 }
+
+.category
+{
+  padding-left: 10px;
+  .text-list
+  {
+     color:red;
+     text-align: center;
+  }
+}
