--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-md-8" style="padding-left: 10px;">
+  <div class="col-md-8 category">
     <div class="list-group">
       <div class="list-group-item list-group-item-success">
         <h3 class="list-group-item-heading">
           <%= category.name %>
         </h3>
-        <p class="list-group-item-text" style="color:black">
+        <p class="list-group-item-text">
           <%= category.description %>
         </p>
       </div>
