--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-md-10">
-    <h2 style="color:red" align="center"><%= t "categories" %></h2>
-    <hr/><hr/>
+  <div class="col-md-10 category">
+    <h2 class="text-list"><%= t "categories" %></h2>
+    <hr/>
     <%= render @categories %>
     <%= will_paginate %>
   </div>
