--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<table class="table table-hover table-bordered ">
   <tr class="success">
     <th><%= t "word" %></th>
     <th><%= t "meaning" %></th>
