--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -4,7 +4,7 @@
   <div id="word_table">
     <%= render "word" %>
   </div>
-  <div class="col-md-6 col-md-offset-3 paginate">
-    <%= will_paginate @word %>
+  <div class="col-md-6 col-md-offset-3">
+    <%= will_paginate %>
   </div>
 </div>
